--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -13,6 +13,10 @@ html, body {
     height: 100%;
 }
 
+.row {
+  text-align: center;
+}
+
 .heading {
     color: white;
     text-align: center;
@@ -35,6 +39,12 @@ button {
     margin: 14px 12px;
     cursor: pointer;
     border-radius: 4px;
+}
+
+#children-wrapper{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .btn-blue {
